Bug 571419 - Buffer reads from msgFilterRules.dat instead of reading by 1 char. r=bienvenu